--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -10,6 +10,7 @@
   },
   "BaseDirectories": {
     "UserWorkspaceBaseDir": "c:/px-infrastructure/workspaces",
-    "LibraryBaseDir": "c:/px-infrastructure/library"
+    "LibraryBaseDir": "c:/px-infrastructure/library",
+    "WorkflowsBaseDir": "c:/px-infrastructure/workflows"
   }
 }
