--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -7,5 +7,6 @@
   },
   "AllowedHosts": "*",
   "UserWorkspaceBaseDir": "c:/px-infrastructure/workspaces",
-  "LibraryBaseDir": "c:/px-infrastructure/library"
+  "LibraryBaseDir": "c:/px-infrastructure/library",
+   "WorkflowsBaseDir": "c:/px-infrastructure/workflows"
 }
